Stash for sonar step

--- a/resources/metadata/sonarExecuteScan.yaml
+++ b/resources/metadata/sonarExecuteScan.yaml
@@ -279,7 +279,8 @@ spec:
           - PARAMETERS
         aliases:
           - name: maven/m2Path
-
+    resources:
+      - type: stash
   outputs:
     resources:
       - name: reports
